# day10

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  claude.md  day10.opam  dune  dune-project  obi.install  obi.opam  setup.json
lib/: dune  obi.ml  obi.mli  obi_builder.ml  obi_builder.mli  obi_config.ml  obi_config.mli  obi_container.ml  obi_container.mli  obi_os.ml  obi_os.mli  obi_report.ml  obi_report.mli  obi_solution.ml  obi_solution.mli  obi_solver.ml  obi_solver.mli
